Fixed: responsiveness for background, gameover and restart, obstacle generation and jump

--- a/Project one.css
+++ b/Project one.css
@@ -1,50 +1,70 @@
-.background {
-    position: absolute;
-    top: 0;
-    left: 0;
-    width:100%;
-    height: 100%;
-    z-index: -1;
-    background-image: url("/Users/sandyyeo/Desktop/GA Project 1/Background-GA-straight line.svg");
-    background-size: cover;
-    background-origin: inherit;
-  }
-
-button {
-display: flex;
-flex-direction: row;
-justify-content: center;
-align-items: center;
-padding: 12px 48px;
-gap: 10px;
-
-position: absolute;
-width: 272px;
-height: 64px;
-left: 45%;
-bottom: 20%;
-
-background: #077194;
-box-shadow: 4px 5px 30px 6px rgba(2, 101, 134, 0.157);
-border-radius: 8px;
-font-size: 18px; 
-font-family: Arial, Helvetica, sans-serif;
-color: #FFFFFF; 
-z-index: 0;
+body {
+  overflow: hidden;
 }
 
-.walkingBall {
-    position: absolute;
-    left: 50%;
-    bottom: 400px;
-    transform: translate(-50%, -50%);
-    border: 1px solid black;
+.background {
+    position: absolute; 
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    z-index: -1;
+    background-image: url("/Users/sandyyeo/Desktop/GAProject1/Background.svg");
+    background-size: cover;
+    background-origin: inherit;
+    background-position: center center; 
   }
-  
+
+.ballAndButton {
+  height: 100vh;
+  display: flex; 
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  bottom: 100px;
+}
+
+button {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  padding: 12px 48px;
+  gap: 10px;
+    
+  position: absolute;
+  width: auto;
+  min-width: 100px;
+  height: 64px;
+  left: 50%;
+  /* top: calc(50% + 100px); */
+  transform: translateX(-50%);
+    
+  background: #077194;
+  box-shadow: 4px 5px 30px 6px rgba(2, 101, 134, 0.157);
+  border-radius: 8px;
+  font-size: 18px; 
+  font-family: Arial, Helvetica, sans-serif;
+  color: #FFFFFF; 
+  z-index: 0;
+  bottom:  50px;
+
+  white-space:nowrap;
+}
+
+
+.walkingBall {
+  position: absolute; 
+  bottom: 150px;
+  width: fit-content; 
+  left: 50%;
+  transform: translateX(-50%);
+}
+
  .obstacle {
-  POSITION: absolute; 
+  POSITION: absolute;   
   width: 60px; 
   height: 60px;
   background-color: orange; 
-  bottom: 600px; 
+  bottom: 150px; 
  }
